--- a/paid-leaks.html
+++ b/paid-leaks.html
@@ -99,7 +99,7 @@
     <br><br>
     <center><h1>Paid Leaks</h1></center>
     <br><br>
-
+    <p>Coming soon...</p>
     <br><br><br><br><br><br><br><br>
     <footer><p>Made by PraPra123 ©</p></footer>
 </body>
