--- a/free-leaks.html
+++ b/free-leaks.html
@@ -99,7 +99,7 @@
     <br><br>
     <center><h1>Free Leaks</h1></center>
     <br><br>
-    <p>Coming soon...</p>
+    <center><p>Coming soon...</p></center>
     <br><br><br><br><br><br><br><br>
     <footer><p>Made by PraPra123 ©</p></footer>
 </body>
